--- a/src/components/dock-button/dock-button.scss
+++ b/src/components/dock-button/dock-button.scss
@@ -7,7 +7,7 @@ button {
   @include body2;
   text-align: center;
   display: flex;
-  align-items: center;
+  align-items: left;
   border-radius: 5px;
   background: rgba(0, 0, 0, 0);
   transition: background 0.1s ease-in;
@@ -15,16 +15,9 @@ button {
   box-sizing: border-box;
   margin-top: 10px;
   padding: 10px;
-  .gg {
-    margin-left: 4px;
-  }
+  overflow: hidden;
+  max-height: 42px;
 
-  &.collapsed {
-      justify-content: center;
-      .gg {
-        margin-left: 0px;
-      }
-  }
 
   &:hover {
     background: var(--color-accent-secondary);
@@ -38,6 +31,7 @@ button {
 }
 
 .gg {
-  height: 22px;
-  width: 22px;
+  min-width: 22px;
+  min-height: 22px;
+  margin-left: 4px;
 }
