--- a/src/app/apps/employees/employees.scss
+++ b/src/app/apps/employees/employees.scss
@@ -15,3 +15,19 @@ form {
 .gg-add-r {
   margin-right: 10px;
 }
+
+.submit-but {
+  outline: 1px solid var(--color-accent-secondary);
+  &:disabled {
+    opacity: 0.40;
+    cursor: default;
+    background: var(--color-accent-tertiary);
+    outline: none;
+
+    &:hover {
+      color: unset !important;
+      background-color: var(--color-accent-tertiary);
+    }
+  }
+}
+
