--- a/src/utils/components/modal/modal.scss
+++ b/src/utils/components/modal/modal.scss
@@ -10,18 +10,20 @@
 .modal-main {
   position:fixed;
   background: var(--color-background-secondary);
-  width: 80%;
+  width: 50%;
   height: auto;
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
   padding: 20px;
   border-radius: 20px;
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
 }
 
 .modal-close {
   position: absolute;
-  top: 0px;
+  top: 0;
   right: 10px;
   padding: 10px;
   cursor: pointer;
